# manytables

./: Makefile  README.md  setup.cfg  setup.py
examples/spreadsheet/: Makefile  manytables.toml
examples/spreadsheet/manytables/: Group.tsv  metadata.toml
examples/spreadsheet/manytables-18fXVSZg_z7wNsGm0SaLHHftdI7MB_r59NnAGZ-VxY-s/: Member.tsv  metadata.toml
examples/spreadsheet/manytables2/: metadata.toml
manytables/: __main__.py  cli.py  configuration.py  metadata.py
manytables/csvdb/: __init__.py  models.py
manytables/spreadsheet/: __init__.py  access.py  auth.py
manytables/spreadsheetdb/: __init__.py  access.py  auth.py  configuration.py  models.py
