# see: https://setuptools.readthedocs.io/en/latest/setuptools.html#specifying-values
[metadata]
name = manytables
version = file:VERSION

summary = many tables
long_description = file:README.md
long_description_content_type = text/markdown

url = https://github.com/podhmo/manytables
author = podhmo
author_email = ababjam61+github@gmail.com

[options]
include_package_data = True
zip_safe = False

# [options.entry_points]
# console_scripts =
#     manytables = manytables.cli:main

[bdist_wheel]
universal=0